fixed gap between hoempage img and education img

--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ header a img{
     max-height: 4em;
 }
 
+
 .homepage h1{
     text-align: center;
     position: absolute;
@@ -54,7 +55,9 @@ header a img{
 
 .about-boxes{
 
-    margin: 10px;
+    min-width: 40%;
+    width: 500px;
+    margin: auto;
     padding: 15px;
     /*background-color: whitesmoke;*/
     /*border-radius: 25px;*/
@@ -75,6 +78,7 @@ header a img{
 #education{
     display: flex;
     flex-wrap: wrap;
+    margin: -4px;
 
 }
 
@@ -84,10 +88,7 @@ header a img{
     min-width: 50%;
 }
 .about-boxes{
-    min-width: 40%;
-    width: 500px;
 
-    margin: auto;
 }
 
 #work{
@@ -123,6 +124,9 @@ header a img{
 
 @media (max-width: 1099px) {
 
+    .about-boxes{
+        width: 90%;
+    }
     .about-boxes h3{
         font-size: 7vw;
     }
